--- a/server/components/Animation.css
+++ b/server/components/Animation.css
@@ -41,4 +41,7 @@
     background-color: #1e90ff;
     color: #f1f1f1;
     transform: rotateY(180deg);
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
