--- a/server/components/Animation.css
+++ b/server/components/Animation.css
@@ -15,10 +15,17 @@
     text-align: center;
     transition: transform 0.8s;
     transform-style: preserve-3d;
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
   }
   
   /* Do an horizontal flip when you move the mouse over the flip box container */
-  .flip-card:hover .flip-card-inner {
+  /* .flip-card:hover .flip-card-inner, .flip-card-back {
+    transform: rotateY(180deg);
+  } */
+
+  .flip-card:active .flip-card-inner, .flip-card-back {
     transform: rotateY(180deg);
   }
   
@@ -38,10 +45,36 @@
   
   /* Style the back side */
   .flip-card-back {
-    background-color: #1e90ff;
-    color: #f1f1f1;
-    transform: rotateY(180deg);
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+
+  .flip-card-back h1 {
+    background-color: #1e90ff;
+    color: #f1f1f1;
+    display: inline-block;
+    width: min(min(100vh, 100vw), 1080px);
+    height: min(min(100vh, 100vw), 1080px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .canvas {
+    position: relative;
+    /* width: calc(100% -16px);
+    height: calc(100vh - 16px); */
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+  }
+
+  .layer {
+    width: min(100%, 100vw);
+    height: min(100%, 100vh);
   }
