--- a/server/components/Animation.css
+++ b/server/components/Animation.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 .flip-card {
     overflow: hidden;
     background-color: transparent;
@@ -15,16 +17,8 @@
     text-align: center;
     transition: transform 0.8s;
     transform-style: preserve-3d;
-    /* display: flex;
-    align-items: center;
-    justify-content: center; */
   }
   
-  /* Do an horizontal flip when you move the mouse over the flip box container */
-  /* .flip-card:hover .flip-card-inner, .flip-card-back {
-    transform: rotateY(180deg);
-  } */
-
   .flip-card:active .flip-card-inner, .flip-card-back {
     transform: rotateY(180deg);
   }
@@ -59,12 +53,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 30px;
   }
 
   .canvas {
     position: relative;
-    /* width: calc(100% -16px);
-    height: calc(100vh - 16px); */
     width: 100%;
     height: 100%;
     overflow: hidden;
