--- a/server/components/Animation.css
+++ b/server/components/Animation.css
@@ -44,13 +44,14 @@
     justify-content: center;
   }
 
-  .flip-card-back h1 {
+  .flip-card-back div {
     background-color: #1e90ff;
     color: #f1f1f1;
     display: inline-block;
     width: min(min(100vh, 100vw), 1080px);
     height: min(min(100vh, 100vw), 1080px);
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     font-family: 'Poppins', sans-serif;
